--- a/RMS/data/arduino.css
+++ b/RMS/data/arduino.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: auto auto;
     grid-gap: 10px;
-    background-color: #ff0000;
+    background-color: #00ffff;
     padding: 10px;
 }
 
@@ -28,12 +28,11 @@ body {
 }
 
 h1 {
-    background-color: green;
+    background-color: rgb(23, 9, 61);
     color: white;
-    text-align: center;
+    text-align: center; background-color: #0077ff;
+
 }
-
-
 /* Navbar */
 ul {
     list-style-type: none;
@@ -61,5 +60,9 @@ li a:hover {
 }
 
 .active {
-    background-color: #04AA6D;
+    background-color: #0077ff;
+}
+
+.guest {
+    background-color: #a6ff00;
 }
